--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
           <div class="col-sm-12 col-md-6 col-lg-6">
             <img
-              class="img-fluid img-custom mt-4"
+              class="img-fluid img-custom mt-4 box-fadeup reveal"
               src="photos/developer.PNG"
               alt="Developer"
             />
@@ -123,13 +123,13 @@
               focused on performance, security, and Management.
             </p>
             <div class="mt-4">
-              <a href="#about" class="btn btn-main me-3 box-glow"
+              <a href="#about" class="btn btn-main me-3 box-glow box-fadeup reveal"
                 >More About me</a
               >
             </div>
           </div>
           <div class="col-md-6 col-lg-6 mt-4">
-            <div class="col-md-6 col-lg-5 m-2 float-start box-glow">
+            <div class="col-md-6 col-lg-5 m-2 .-start box-glow box-fadeup reveal">
               <div class="service-card text-center">
                 <i class="bi bi-code-slash fs-1 text-info"></i>
                 <h3 class="text-glow mt-3">Frontend</h3>
@@ -142,7 +142,7 @@
                 <br /><br />
               </div>
             </div>
-            <div class="col-md-6 col-lg-5 m-2 float-start mt-4 box-glow">
+            <div class="col-md-6 col-lg-5 m-2 float-start mt-4 box-glow box-fadeup reveal">
               <div class="service-card text-center">
                 <i class="bi bi-server fs-1 text-info"></i>
                 <h3 class="text-glow mt-3">Backend</h3>
@@ -155,7 +155,7 @@
                 <br /><br />
               </div>
             </div>
-            <div class="col-md-6 col-lg-5 m-2 float-start box-glow">
+            <div class="col-md-6 col-lg-5 m-2 float-start box-glow box-fadeup reveal">
               <div class="service-card text-center">
                 <i class="bi bi-palette fs-1 text-info"></i>
                 <h3 class="text-glow mt-3">Desktop</h3>
@@ -168,7 +168,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 col-lg-5 m-2 float-start mt-4 box-glow">
+            <div class="col-md-6 col-lg-5 m-2 float-start mt-4 box-glow box-fadeup reveal">
               <div class="service-card text-center">
                 <i class="bi bi-kanban fs-1 text-info"></i>
                 <h3 class="text-glow mt-3">Management</h3>
@@ -385,53 +385,53 @@
     </section>
     <section class="skills-photos clear-fix">
       <div class="container">
-        <div class="row custom-photo text-center box-glow">
+        <div class="row custom-photo text-center p-4">
           <h3 class="text-glow m-4">My Skills</h3>
-          <div class="col-sm-6 col-md-3 col-lg-3 skill-photo box-glow">
+          <div class="col-sm-6 col-md-3 col-lg-3 skill-photo box-glow box-fadeup reveal">
             <img src="photos/java.png" alt="java" />
             <p>Java</p>
           </div>
-          <div class="col-sm-6 col-md-3 col-lg-3 skill-photo box-glow">
+          <div class="col-sm-6 col-md-3 col-lg-3 skill-photo box-glow box-fadeup reveal">
             <img src="photos/python.png" alt="python" />
             <p>Python</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow">
+          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
             <img src="photos/html-5.png" alt="html" />
             <p>HTML</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow">
+          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
             <img src="photos/css-3.png" alt="css" />
             <p>CSS</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow">
-            <img src="photos/java-script.png" alt="javascript box-glow" />
+          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
+            <img src="photos/java-script.png" alt="javascript box-glow box-fadeup reveal" />
             <p>javascript</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow">
+          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
             <img src="photos/bootstrap.png" alt="bootstrap" />
             <p>Bootstrap</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow">
+          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
             <img src="photos/php.png" alt="php" />
             <p>PHP</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow">
+          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
             <img src="photos/laravel.png" alt="laravel" />
             <p>Laravel</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow">
+          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
             <img src="photos/mysql.png" alt="mysql" />
             <p>MySQL</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow">
+          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
             <img src="photos/figma.png" alt="figma" />
             <p>Figma</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow">
+          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
             <img src="photos/xd.png" alt="xd" />
             <p>Adobe XD</p>
           </div>
-          <div class="col-sm-6 col-md-3 skill-photo">
+          <div class="col-sm-6 col-md-3 skill-photo box-fadeup reveal">
             <img src="photos/github.png" alt="github" height="64" />
             <p>Github</p>
           </div>
@@ -456,17 +456,17 @@
             Shopping services (Web App)
           </h3>
           <img
-            class="project-photo img-responsiv box-glow"
+            class="project-photo img-responsiv box-glow box-fadeup reveal"
             src="photos/chatack-english.png"
             alt="chatack-english"
           />
           <img
-            class="project-photo img-responsiv box-glow"
+            class="project-photo img-responsiv box-glow box-fadeup reveal"
             src="photos/chatack-persion.png"
             alt="chatack-persion"
           />
           <img
-            class="project-photo img-responsiv box-glow"
+            class="project-photo img-responsiv box-glow box-fadeup reveal"
             src="photos/chatack-pashto.png"
             alt="chatack-pashto"
           />
@@ -474,7 +474,7 @@
             <span class="text-glow">Hostel</span> MIS (Java App)
           </h3>
           <img
-            class="project-photo img-responsiv box-glow"
+            class="project-photo img-responsiv box-glow box-fadeup reveal"
             src="photos/hostel-mis.png"
             alt="hostel-mis"
           />
@@ -482,7 +482,7 @@
             <span class="text-glow">Caluculator</span> Application (Java App)
           </h3>
           <img
-            class="project-photo img-responsiv box-glow"
+            class="project-photo img-responsiv box-glow box-fadeup reveal"
             src="photos/caculator.PNG"
             alt="calculator"
             height="600"
@@ -491,7 +491,7 @@
             <span class="text-glow">Booken</span> books (Web App)
           </h3>
           <img
-            class="project-photo img-responsiv box-glow"
+            class="project-photo img-responsiv box-glow box-fadeup reveal"
             src="photos/booken.png"
             alt="Booken"
           />
