--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Lotfullah Ahmadi</title>
@@ -63,17 +63,17 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-sm-12 col-md-6 col-lg-6">
-            <span class="greating mt-4 box-glow">
+            <span class="greating mt-4 box-glow box-fadein reveal">
               Asalamualikum
               <span class="text-glow">(Hi)</span>
               and willcome to my website
               <span class="text-glow">I'm</span>
             </span>
-            <h5 class="mt-4">
+            <h5 class="mt-4 box-fade-left reveal d-block">
               Lotfullah <span class="text-glow"> AHMADI </span> a
             </h5>
             <span id="text" class="wrapper text-glow tran box-glow"></span>
-            <p class="mt-3">
+            <p class="mt-3 box-fade-right reveal">
               A passionate Computer Sceince
               <span class="text-glow">specialist</span>, with a strong interest
               in software development and information systems. I have completed
@@ -86,7 +86,7 @@
               problem-solving abilities.
             </p>
 
-            <div class="mt-4">
+            <div class="mt-4 box-fadeup reveal">
               <a
                 href="Lotfullah Ahmadi Resume.pdf"
                 class="btn btn-main me-3 box-glow"
@@ -110,9 +110,9 @@
     <section class="service" id="service">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-6">
+          <div class="col-md-6 col-lg-6 box-fadein reveal">
             <h2 class="fw-bold">My <span class="text-glow">Services</span></h2>
-            <p>
+            <p class="box-fadein reveal">
               Greetings, fellow digital explorers! i am
               <span class="text-glow">Lotfullah ahmadi</span> a passionate and
               innovative developer dedicated to creating immersive digital
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="col-md-6 col-lg-6 mt-4">
-            <div class="col-md-6 col-lg-5 m-2 .-start box-glow box-fadeup reveal">
+            <div class="col-md-6 col-lg-5 m-2  box-glow box-fadeup reveal">
               <div class="service-card text-center">
                 <i class="bi bi-code-slash fs-1 text-info"></i>
                 <h3 class="text-glow mt-3">Frontend</h3>
@@ -142,7 +142,7 @@
                 <br /><br />
               </div>
             </div>
-            <div class="col-md-6 col-lg-5 m-2 float-start mt-4 box-glow box-fadeup reveal">
+            <div class="col-md-6 col-lg-5 m-2 mt-4 box-glow box-fade-left reveal">
               <div class="service-card text-center">
                 <i class="bi bi-server fs-1 text-info"></i>
                 <h3 class="text-glow mt-3">Backend</h3>
@@ -155,7 +155,7 @@
                 <br /><br />
               </div>
             </div>
-            <div class="col-md-6 col-lg-5 m-2 float-start box-glow box-fadeup reveal">
+            <div class="col-md-6 col-lg-5 m-2 box-glow box-fade-right reveal">
               <div class="service-card text-center">
                 <i class="bi bi-palette fs-1 text-info"></i>
                 <h3 class="text-glow mt-3">Desktop</h3>
@@ -168,7 +168,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 col-lg-5 m-2 float-start mt-4 box-glow box-fadeup reveal">
+            <div class="col-md-6 col-lg-5 m-2 mt-4 box-glow box-fadein reveal">
               <div class="service-card text-center">
                 <i class="bi bi-kanban fs-1 text-info"></i>
                 <h3 class="text-glow mt-3">Management</h3>
@@ -196,26 +196,26 @@
         <div class="row text-center">
           <div class="col-md-3 inner-gray">
             <div>
-              <h2>2+</h2>
-              <p>Years Experience</p>
+              <h2 class="box-fade-left reveal d-block">2+</h2>
+              <p class="box-fade-right reveal d-block">Years Experience</p>
             </div>
           </div>
           <div class="col-md-3 inner-gray">
             <div>
-              <h2>20+</h2>
-              <p>Projects</p>
+              <h2 class="box-fade-left reveal d-block">20+</h2>
+              <p class="box-fade-right reveal d-block">Projects</p>
             </div>
           </div>
           <div class="col-md-3 inner-gray">
             <div>
-              <h2>5+</h2>
-              <p>Clients</p>
+              <h2 class="box-fade-left reveal d-block">5+</h2>
+              <p class="box-fade-right reveal d-block">Clients</p>
             </div>
           </div>
           <div class="col-md-3 inner-gray">
             <div>
-              <h2>15+</h2>
-              <p>Awards</p>
+              <h2 class="box-fade-left reveal d-block">15+</h2>
+              <p class="box-fade-right reveal d-block">Awards</p>
             </div>
           </div>
         </div>
@@ -226,7 +226,7 @@
     <section class="about" id="about">
       <div class="container">
         <div class="row text-center">
-          <h2 class="mt-4">More <span class="text-glow">About</span> me</h2>
+          <h2 class="mt-4"><span class="box-fade-left reveal">More</span><span class="text-glow box-fadein reveal">About</span> <span class="box-fade-right reveal">me</span></h2>
           <p class="mt-3">
             Greetings, fellow digital explorers! I am Lotfullah Ahmadi, a
             passionate developer dedicated to crafting immersive digital
@@ -235,26 +235,26 @@
         </div>
         <div class="container about">
           <div class="col-sm-12 col-md-12 col-lg-5 float-start">
-            <h3>My Education</h3>
+            <h3 class="box-fade-left reveal">My Education</h3>
             <h5 class="mt-5">2022-2026</h5>
-            <h5><span class="text-glow">Diploma Development</span></h5>
-            <p class="mt-3">
+            <h5 class="box-fade-left reveal"><span class="text-glow">Diploma Development</span></h5>
+            <p class="mt-3 box-fade-right reveal">
               I hold a diploma in Computer Science, where I gained strong
               knowledge in programming, software development, and information
               technology. During my studies, I worked on practical projects that
               improved my problem-solving and technical skills.
             </p>
             <h5 class="mt-5">2024-2024</h5>
-            <h5><span class="text-glow">Desktop App Development</span></h5>
-            <p class="mt-5">
+            <h5 class="box-fade-left reveal"><span class="text-glow">Desktop App Development</span></h5>
+            <p class="mt-5 box-fade-right reveal">
               I have experience in developing desktop applications with a focus
               on functionality, performance, and user-friendly design. I have
               worked on small and medium-scale projects, implementing features
               such as data management, calculations, and system automation.
             </p>
             <h5 class="mt-5">2025-2025</h5>
-            <h5><span class="text-glow">Web Development</span></h5>
-            <p class="mt-3">
+            <h5 class="box-fade-left reveal"><span class="text-glow">Web Development</span></h5>
+            <p class="mt-3 box-fade-right reveal">
               I have skills in web development and can create modern, responsive
               websites using HTML, CSS, and related technologies. I focus on
               clean design, usability, and efficient code to build personal and
@@ -263,9 +263,9 @@
           </div>
           <div class="col-sm-12 col-md-12 col-lg-5 float-start">
             <div class="skills-section">
-              <h2>My Skills</h2>
+              <h2>My <span class="text-glow">Skills</span></h2>
 
-              <div class="skill mt-5" data-percent="90">
+              <div class="skill mt-5 box-fade-left reveal d-block" data-percent="90">
                 <div class="skill-header">
                   <span>java</span>
                   <small>90%</small>
@@ -275,7 +275,7 @@
                 </div>
               </div>
 
-              <div class="skill" data-percent="50">
+              <div class="skill box-fade-right reveal d-block" data-percent="50">
                 <div class="skill-header">
                   <span>Python</span>
                   <small>50%</small>
@@ -285,7 +285,7 @@
                 </div>
               </div>
 
-              <div class="skill" data-percent="85">
+              <div class="skill box-fade-left reveal d-block" data-percent="85">
                 <div class="skill-header">
                   <span>HTML</span>
                   <small>85%</small>
@@ -295,7 +295,7 @@
                 </div>
               </div>
 
-              <div class="skill" data-percent="80">
+              <div class="skill box-fade-right reveal d-block" data-percent="80">
                 <div class="skill-header">
                   <span>CSS</span>
                   <small>80%</small>
@@ -305,7 +305,7 @@
                 </div>
               </div>
 
-              <div class="skill" data-percent="75">
+              <div class="skill box-fade-left reveal d-block" data-percent="75">
                 <div class="skill-header">
                   <span>JavaScript</span>
                   <small>75%</small>
@@ -315,7 +315,7 @@
                 </div>
               </div>
 
-              <div class="skill" data-percent="80">
+              <div class="skill box-fade-right reveal d-block" data-percent="80">
                 <div class="skill-header">
                   <span>Bootstrap</span>
                   <small>80%</small>
@@ -324,7 +324,7 @@
                   <div class="progress-bar"></div>
                 </div>
               </div>
-              <div class="skill" data-percent="65">
+              <div class="skill box-fade-left reveal d-block" data-percent="65">
                 <div class="skill-header">
                   <span>PHP</span>
                   <small>65%</small>
@@ -333,7 +333,7 @@
                   <div class="progress-bar"></div>
                 </div>
               </div>
-              <div class="skill" data-percent="60">
+              <div class="skill box-fade-right reveal d-block" data-percent="60">
                 <div class="skill-header">
                   <span>Laravel</span>
                   <small>60%</small>
@@ -342,7 +342,7 @@
                   <div class="progress-bar"></div>
                 </div>
               </div>
-              <div class="skill" data-percent="80">
+              <div class="skill box-fade-left reveal d-block" data-percent="80">
                 <div class="skill-header">
                   <span>MySQL</span>
                   <small>80%</small>
@@ -351,7 +351,7 @@
                   <div class="progress-bar"></div>
                 </div>
               </div>
-              <div class="skill" data-percent="50">
+              <div class="skill box-fade-right reveal d-block" data-percent="50">
                 <div class="skill-header">
                   <span>Figma</span>
                   <small>50%</small>
@@ -360,7 +360,7 @@
                   <div class="progress-bar"></div>
                 </div>
               </div>
-              <div class="skill" data-percent="50">
+              <div class="skill box-fade-left reveal d-block" data-percent="50">
                 <div class="skill-header">
                   <span>Adobe XD</span>
                   <small>50%</small>
@@ -369,7 +369,7 @@
                   <div class="progress-bar"></div>
                 </div>
               </div>
-              <div class="skill" data-percent="60">
+              <div class="skill box-fade-right reveal d-block" data-percent="60">
                 <div class="skill-header">
                   <span>Github</span>
                   <small>60%</small>
@@ -387,51 +387,51 @@
       <div class="container">
         <div class="row custom-photo text-center p-4">
           <h3 class="text-glow m-4">My Skills</h3>
-          <div class="col-sm-6 col-md-3 col-lg-3 skill-photo box-glow box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
             <img src="photos/java.png" alt="java" />
             <p>Java</p>
           </div>
-          <div class="col-sm-6 col-md-3 col-lg-3 skill-photo box-glow box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal">
             <img src="photos/python.png" alt="python" />
             <p>Python</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
             <img src="photos/html-5.png" alt="html" />
             <p>HTML</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal">
             <img src="photos/css-3.png" alt="css" />
             <p>CSS</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
-            <img src="photos/java-script.png" alt="javascript box-glow box-fadeup reveal" />
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
+            <img src="photos/java-script.png" alt="javascript box-glow box-fade-right reveal" />
             <p>javascript</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
             <img src="photos/bootstrap.png" alt="bootstrap" />
             <p>Bootstrap</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal">
             <img src="photos/php.png" alt="php" />
             <p>PHP</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
             <img src="photos/laravel.png" alt="laravel" />
             <p>Laravel</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal">
             <img src="photos/mysql.png" alt="mysql" />
             <p>MySQL</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
             <img src="photos/figma.png" alt="figma" />
             <p>Figma</p>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-3 skill-photo box-glow box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal">
             <img src="photos/xd.png" alt="xd" />
             <p>Adobe XD</p>
           </div>
-          <div class="col-sm-6 col-md-3 skill-photo box-fadeup reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
             <img src="photos/github.png" alt="github" height="64" />
             <p>Github</p>
           </div>
@@ -443,9 +443,9 @@
       <div class="container text-center">
         <div class="row">
           <h2 class="mt-4">
-            My <span class="text-glow">Latest</span> Projects
+            <span class="box-fade-left reveal">My</span> <span class="text-glow box-fadeup reveal">Latest</span> <span class="box-fade-right reveal">Projects</span>
           </h2>
-          <p class="mt-3">
+          <p class="mt-3 box-fadeup reveal">
             I have worked on several recent projects that helped me strengthen
             my practical skills in software and web development. These projects
             reflect my ability to design, develop, and implement
@@ -504,23 +504,23 @@
         <div class="row text-center">
           <h4 class="text-glow m-3">Contact Me</h4>
           <div class="col-md-12 col-lg-6 text-start contact-text">
-            <h1>Keep <span class="text-glow">Conneted</span> with me!</h1>
-            <h5>
+            <h1>Keep <span class="text-glow box-fadeup reveal">Connected</span> with me!</h1>
+            <h5 class="box-fadein reveal">
               Let's discuss your project and see how we can bring your vision to
               life.
             </h5>
-            <div class="mt-4">
+            <div class="mt-4 box-fade-right reveal">
               <img src="photos/email.png" alt="email" height="20" /><span
                 id="email"
               >
                 lotfullahahmadi81@gmail.com</span
               >
             </div>
-            <div class="mt-4">
+            <div class="mt-4 box-fadeup reveal d-block">
               <img src="photos/phone-call.png" alt="phone" height="20" />
               <span id="phone">+93792618681</span>
             </div>
-            <div class="mt-4">
+            <div class="mt-4 box-fade-right reveal">
               <img src="photos/map-pin.png" alt="address" height="20" />
               <span>Kabul city, Kabul Afghanistan</span>
             </div>
