--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-sm-12 col-md-6 col-lg-6">
-            <span class="greating mt-4 box-glow box-fadein reveal">
+            <span class="greating mt-4 box-glow box-fadeup reveal d-block">
               Asalamualikum
               <span class="text-glow">(Hi)</span>
               and willcome to my website
@@ -226,7 +226,7 @@
     <section class="about" id="about">
       <div class="container">
         <div class="row text-center">
-          <h2 class="mt-4"><span class="box-fade-left reveal">More</span><span class="text-glow box-fadein reveal">About</span> <span class="box-fade-right reveal">me</span></h2>
+          <h2 class="mt-4"><span class="box-fade-left reveal">More</span><span class="text-glow box-fadeup reveal">About</span> <span class="box-fade-right reveal">me</span></h2>
           <p class="mt-3">
             Greetings, fellow digital explorers! I am Lotfullah Ahmadi, a
             passionate developer dedicated to crafting immersive digital
@@ -234,7 +234,7 @@
           </p>
         </div>
         <div class="container about">
-          <div class="col-sm-12 col-md-12 col-lg-5 float-start">
+          <div class="col-sm-12 col-md-12 col-lg-5">
             <h3 class="box-fade-left reveal">My Education</h3>
             <h5 class="mt-5">2022-2026</h5>
             <h5 class="box-fade-left reveal"><span class="text-glow">Diploma Development</span></h5>
@@ -261,7 +261,7 @@
               professional websites.
             </p>
           </div>
-          <div class="col-sm-12 col-md-12 col-lg-5 float-start">
+          <div class="col-sm-12 col-md-12 col-lg-5">
             <div class="skills-section">
               <h2>My <span class="text-glow">Skills</span></h2>
 
@@ -383,55 +383,55 @@
         </div>
       </div>
     </section>
-    <section class="skills-photos clear-fix">
+    <section class="skills-photos">
       <div class="container">
         <div class="row custom-photo text-center p-4">
           <h3 class="text-glow m-4">My Skills</h3>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal m-md-3">
             <img src="photos/java.png" alt="java" />
             <p>Java</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal m-md-3">
             <img src="photos/python.png" alt="python" />
             <p>Python</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal m-md-3">
             <img src="photos/html-5.png" alt="html" />
             <p>HTML</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal m-md-3">
             <img src="photos/css-3.png" alt="css" />
             <p>CSS</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
-            <img src="photos/java-script.png" alt="javascript box-glow box-fade-right reveal" />
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal m-md-3">
+            <img src="photos/java-script.png" alt="javascript" />
             <p>javascript</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal m-md-3">
             <img src="photos/bootstrap.png" alt="bootstrap" />
             <p>Bootstrap</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal m-md-3">
             <img src="photos/php.png" alt="php" />
             <p>PHP</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal m-md-3">
             <img src="photos/laravel.png" alt="laravel" />
             <p>Laravel</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal m-md-3">
             <img src="photos/mysql.png" alt="mysql" />
             <p>MySQL</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal m-md-3">
             <img src="photos/figma.png" alt="figma" />
             <p>Figma</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-right reveal m-md-3">
             <img src="photos/xd.png" alt="xd" />
             <p>Adobe XD</p>
           </div>
-          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal">
+          <div class="col-sm-5 col-md-2 col-lg-2 skill-photo box-glow box-fade-left reveal m-md-3">
             <img src="photos/github.png" alt="github" height="64" />
             <p>Github</p>
           </div>
@@ -439,7 +439,7 @@
       </div>
     </section>
     <!--My projects-->
-    <section class="projects clear-fix mt-3" id="project">
+    <section class="projects mt-3" id="project">
       <div class="container text-center">
         <div class="row">
           <h2 class="mt-4">
